Updates to prepare for R2